# StateMachineCreator

./: .codecov.yml  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  conan-repo.cfg.gpg  conanfile.txt
build-tools/: build_conan_dependencies.py  upload_codecov.py
build-tools/conan/conanrepo/: conanrepo.py
build-tools/conan/test/: missing_option  no_section  ok_config  test_conanrepo.py
cmake/: CCache.cmake  CodeCoverage.cmake  iwyu.cmake
dev-tools/: cpplint.py
src/: CMakeLists.txt  CPPLINT.cfg
src/cmake/: CCache.cmake  iwyu.cmake
src/cmake/Modules/: FindZeroMQ.cmake
src/common/include/: memory.h
src/creator/: CMakeLists.txt  EntryPoint.cpp  GraphicsViewZoom.cpp  GraphicsViewZoom.hpp  InsertElementToolBar.cpp  InsertElementToolBar.hpp  MainWindow.cpp  MainWindow.hpp  OutlineGraphicsItem.cpp  OutlineGraphicsItem.hpp  OutlineStroke.cpp  OutlineStroke.hpp  ResizeHandle.cpp  ResizeHandle.hpp  State.cpp  State.hpp  WorkArea.cpp  WorkArea.hpp  WorkAreaScene.cpp  WorkAreaScene.hpp  WorkAreaView.cpp  WorkAreaView.hpp  ZoomableGraphicsView.cpp  ZoomableGraphicsView.hpp  graphics.qrc  main.cpp
src/creator/src/: main.cpp
src/gui/: CMakeLists.txt  EntryPoint.cpp  EntryPoint.hpp  GraphicsItemResizingHandler.cpp  GraphicsItemResizingHandler.hpp  GraphicsViewZoom.cpp  GraphicsViewZoom.hpp  IResizable.hpp  InsertElementToolBar.cpp  InsertElementToolBar.hpp  MainWindow.cpp  MainWindow.hpp  OutlineGraphicsItem.cpp  OutlineGraphicsItem.hpp  OutlineStroke.cpp  OutlineStroke.hpp  State.cpp  State.hpp  TextGraphicsItem.cpp  TextGraphicsItem.hpp  WorkAreaScene.cpp  WorkAreaScene.hpp
src/gui/include/gui/: Factory.hpp
src/gui/resources/: icons.qrc
src/gui/src/: EntryPoint.cpp  EntryPoint.hpp  ExclusiveCheckableToolBar.cpp  ExclusiveCheckableToolBar.hpp  Factory.cpp  Factory.hpp  GraphicsViewZoom.cpp  GraphicsViewZoom.hpp  InsertElementToolBar.cpp  InsertElementToolBar.hpp  MainWindow.cpp  MainWindow.hpp  OutlineGraphicsItem.cpp  OutlineGraphicsItem.hpp  OutlineStroke.cpp  OutlineStroke.hpp  State.cpp  State.hpp  TextGraphicsItem.cpp  TextGraphicsItem.hpp  WorkAreaScene.cpp  WorkAreaScene.hpp  configuration.h  element_graphics_item_builder.cc  element_graphics_item_builder.h  element_graphics_item_factory.cc  element_graphics_item_factory.h  exclusive_checkable_tool_bar.cc  exclusive_checkable_tool_bar.h  factory.cc  factory.h  i_configuration.h  i_element_graphics_item_factory.h  i_insert_controller.h  i_observable_graphics_item.h  i_scene_controller.h  i_scene_controller_fwd.h  iinsert_controller.h  insert_controller.cc  insert_controller.h  (+9 more)
src/gui/src/ui/: mainwindow.ui
src/gui/test/: CMakeLists.txt  test_exclusive_tool_bar.cpp  testqstring.cpp
src/gui/test/internal/: main.cc  test_element_graphics_item.cc  test_element_graphics_item_builder.cc  test_element_graphics_item_factory.cc  test_exclusive_tool_bar.cc  test_insert_controller.cc  test_scene_controller.cc  test_state_machine_scene.cc
src/gui/test/mock/: mock_scene_controller.h
src/model/: CMakeLists.txt
src/model/include/model/: Factory.hpp  IClonable.hpp  IListener.hpp  IObservable.hpp  IState.hpp  IState_fwd.hpp  Observable.hpp  element.h  factory.h  i_cloneable.h  i_state.h  i_state_fwd.h  ielement.h  ielement_fwd.h  ielement_visitor.h  ielement_visitor_fwd.h
src/model/src/model/: Factory.cpp  State.cpp  State.hpp  factory.cc  state.cc  state.h
src/model/test/: test_state.cpp
src/server/: CMakeLists.txt  main.cpp
src/server/src/: main.cpp
src/test-helpers/: CMakeLists.txt
src/test-helpers/include/test-helpers/qt/: mouse_events.h  printers.h
